--- a/style_index.css
+++ b/style_index.css
@@ -1,3 +1,6 @@
+/**Importar el tipo de Fuente de Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /**Variables a reutilizar**/
 :root{
     --primario:#CD95F5; 
@@ -9,7 +12,7 @@
     --blanco: #FFFFFF;
     --negro: #000000;
 
-    --fuente_Principal: sans-serif;
+    --fuente_Principal: "Poppins";
 }
 
 /**Cambia la forma de calcular el tamaño de un elemento**/
@@ -44,6 +47,8 @@ a{
 h1,h2,h3{
     text-align: center;
     font-family: var(--fuente_Principal);
+    font-weight: 600;
+    font-style: normal;
 }
 
 h1{
