--- a/style_formulario.css
+++ b/style_formulario.css
@@ -37,6 +37,8 @@ img{
 }
 
 p{
+    font-family: var(--fuente_Principal);
+    font-weight: 300;
     font-size: 1.8rem;
     color: var(--secundario);
 }
@@ -115,6 +117,8 @@ h3{
 
 .campo{
     display: flex;
+    font-family: var(--fuente_Principal);
+    font-weight: 300;
     color: var(--blanco);
     margin-bottom: 2rem;
     gap: 2rem;
@@ -123,6 +127,10 @@ h3{
 .campo_label{
     flex: 0 0 9rem;
     text-align: right;
+}
+
+.campo_label_txtArea{
+    resize: none;
 }
 
 .items{
@@ -142,7 +150,6 @@ h3{
 }
 
 .footer_texto{
-    font-family: var(--fuente_Principal);
     text-align: center;
     font-size: 2.5rem;
 }
