--- a/style_index.css
+++ b/style_index.css
@@ -36,6 +36,8 @@ img{
 }
 
 p{
+    font-family: var(--fuente_Principal);
+    font-weight: 300;
     font-size: 1.8rem;
     color: var(--secundario);
 }
@@ -104,7 +106,6 @@ h3{
 }
 
 .footer_texto{
-    font-family: var(--fuente_Principal);
     text-align: center;
     font-size: 2.2rem;
 }
