--- a/style_nosotros.css
+++ b/style_nosotros.css
@@ -44,6 +44,7 @@ p{
 }
 
 a{
+    font-family: var(--fuente_Principal);
     text-decoration: none;
 }
 
@@ -112,10 +113,11 @@ h3{
 }
 
 .nosotros_contenido{
-
+    text-align: justify;
 }
 
 .nosotros_imagen{
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     grid-row: 1 / 2;
     width: 100%;
 }
@@ -128,7 +130,13 @@ h3{
 
 }
 
+.bloque_titulo{
+    margin: 0;
+}
 
+.bloque{
+    text-align: center;
+}
 
 
 /**Footer**/
@@ -141,5 +149,15 @@ h3{
 .footer_texto{
     color: var(--secundario);
     text-align: center;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
+}
+
+.footer_red{
+    display: flex;
+
+}
+
+.footer_content{
+    margin: 0 1rem;
+    text-align: center;
 }
