--- a/style_index.css
+++ b/style_index.css
@@ -37,15 +37,15 @@ img{
 
 p{
     font-family: var(--fuente_Principal);
-    font-weight: 300;
+    font-weight: 400;
     font-size: 1.8rem;
-    color: var(--secundario);
+    color: var(--negro);
 }
 
 a{
+    font-family: var(--fuente_Principal);
     text-decoration: none;
 }
-
 h1,h2,h3{
     text-align: center;
     font-family: var(--fuente_Principal);
@@ -101,11 +101,27 @@ h3{
 /**Footer**/
 .footer{
     background-color: var(--primario_Oscuro);
-    padding: 1rem 0;
+    padding: 0.1rem 0;
     margin-top: 2rem;
 }
 
 .footer_texto{
+    color: var(--secundario);
     text-align: center;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
+}
+
+.footer_texto_red{
+    color: var(--secundario);
+}
+
+.footer_red{
+    display: flex;
+    justify-content: center;
+
+}
+
+.footer_content{
+    margin: 0 1rem;
+    text-align: center;
 }
