--- a/style_formulario.css
+++ b/style_formulario.css
@@ -185,6 +185,10 @@ h3{
     color: var(--secundario);
 }
 
+.footer_texto_red:hover{
+    color: var(--secundario_Oscuro);
+}
+
 .footer_red{
     display: flex;
     justify-content: center;
